# Back-Software

./: CrearContrato.html  Makefile  README.MD  pyproject.toml  ref.txt
app/: main.py
app/models/: generated.py
app/routers/: __init__.py  contrato.py  epp.py  odi.py  register_company.py  workers.py
app/routers/auth/: login.py  register.py
app/schemas/: epp.py  login.py  odi.py  pdf_epp.py  pdf_odi.py  register_company.py  workers.py
app/services/: dependencies.py  pdf_generator.py  rut_validation.py
app/templates/views/Login/: view_login.js
